cmake_minimum_required(VERSION 2.0 FATAL_ERROR)

# ---------------------------------------------------------------------------- #
# ---------------------------------------------------------------------------- #
# --------------------------- SETUP subber PROJECT --------------------------- #
# ---------------------------------------------------------------------------- #
# ---------------------------------------------------------------------------- #
project(subber)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++14")

# ---------------------------------------------------------------------------- #
# ---------------------------------------------------------------------------- #
# ---------------------- SETUP subber-example TARGET ------------------------- #
# ---------------------------------------------------------------------------- #
# ---------------------------------------------------------------------------- #
#Run "make dev" to build dev target
add_executable(subber-example example.cpp)

